--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"https://github.com/iamyusuf01/My-Portfolio",
   "main": "App.js",
   "name": "project",
   "version": "0.1.0",
@@ -14,6 +15,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -38,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "tailwindcss": "^3.4.10",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
